Fix wildcard.foldercontents overflow

--- a/cpskin/core/browser/resources/css/core.css
+++ b/cpskin/core/browser/resources/css/core.css
@@ -43,3 +43,6 @@
 div#formfield-form-widgets-IDublinCore-subjects  {
     display: none;
 }
+div.table-responsive {
+    overflow-y: initial;
+}
